tests/negative/gold/final_loop_variable2_test.gold
tests/negative/final_loop_variable2_test.toit:25:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/final_loop_variable2_test.toit:10:9: error: Can't assign to final local
    foo = 42
        ^
tests/negative/final_loop_variable2_test.toit:13:26: error: Can't assign to final local
  for x ::= 42; x < 10; x++:
                         ^~
tests/negative/final_loop_variable2_test.toit:17:18: error: Can't assign to final local
  for x ::= 42; x++ < 10; x++:
                 ^~
tests/negative/final_loop_variable2_test.toit:17:28: error: Can't assign to final local
  for x ::= 42; x++ < 10; x++:
                           ^~
tests/negative/final_loop_variable2_test.toit:22:6: error: Can't assign to final local
    x++
     ^~
Compilation failed.
